# template_cpp

./: CMakeLists.txt  CMakeLists.txt.in  README.md  conanfile.py  conanfile.py.in  init.sh
.github/workflows/: ci.yml
cmake/conan/profiles/: aarch64
src/: main.cpp
tests/: sample_test.cpp
